--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Coach Sandbox</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
+
+<main class="wrap">
+  <h1>Don Diego – Coach Sandbox</h1>
+  <p class="sub">Isolated coach logic • no game • no AI API</p>
+
+  <label>
+    Prompt
+    <textarea id="prompt" rows="2">Describe your best friend</textarea>
+  </label>
+
+  <label>
+    Learner answer
+    <textarea id="answer" rows="3">Es simpatico y tiene pelo marron</textarea>
+  </label>
+
+  <label>
+    Language
+    <select id="lang">
+      <option value="es">Spanish</option>
+      <option value="fr">French</option>
+      <option value="de">German</option>
+    </select>
+  </label>
+
+  <button id="runBtn">Ask coach</button>
+
+  <section id="out" class="card hidden"></section>
+</main>
+
+<script src="./coach.js"></script>
+<script src="./script.js"></script>
+</body>
+</html>
 
