--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <section id="out" class="card hidden"></section>
 </main>
 
-<script src="./coach.js"></script>
-<script src="./script.js"></script>
+<script type="module" src="./script.js"></script>
+
 </body>
 </html>
 
