--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
   <section id="out" class="card hidden"></section>
 </main>
 
-<script type="module" src="./script.js"></script>
+<script src="./script.js"></script>
+<script src="./script.js"></script>
+
+
 
 </body>
 </html>
