--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <main class="wrap">
   <h1>Don Diego – Coach Sandbox</h1>
-  <p class="sub">Isolated coach logic • no game • no AI API</p>
+  <p class="sub">Exam-style AI coach • sandbox</p>
 
   <label>
     Prompt
@@ -37,10 +37,5 @@
 </main>
 
 <script src="./script.js"></script>
-<script src="./script.js"></script>
-
-
-
 </body>
 </html>
-
