--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Coach Sandbox</title>
+  <title>Don Diego – Coach Sandbox</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -10,7 +10,7 @@
 
 <main class="wrap">
   <h1>Don Diego – Coach Sandbox</h1>
-  <p class="sub">Exam-style AI coach • sandbox</p>
+  <p class="sub">Junior Cycle style • examiner feedback</p>
 
   <label>
     Prompt
@@ -19,7 +19,7 @@
 
   <label>
     Learner answer
-    <textarea id="answer" rows="3">Es simpatico y tiene pelo marron</textarea>
+    <textarea id="answer" rows="3">Mi amigo es alto y simpatico</textarea>
   </label>
 
   <label>
